<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:layout_marginTop="10dp"
        android:id="@+id/spinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/linearLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature = "
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/temperature_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Temperature"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"/>
            <TextView
                android:id="@+id/wind_speed_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_degree"/>
            <TextView
                android:id="@+id/wind_degree_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_degree"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_dir"/>
            <TextView
                android:id="@+id/wind_dir_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_dir"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"/>
            <TextView
                android:id="@+id/pressure_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precip"/>
            <TextView
                android:id="@+id/precip_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precip"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"/>
            <TextView
                android:id="@+id/humidity_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudcover"/>
            <TextView
                android:id="@+id/cloudcover_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudcover"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelslike"/>
            <TextView
                android:id="@+id/feelslike_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelslike"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uv_index"/>
            <TextView
                android:id="@+id/uv_index_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uv_index"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"/>
            <TextView
                android:id="@+id/visibility_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_day"/>
            <TextView
                android:id="@+id/is_day_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_day"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>